--- a/package.json
+++ b/package.json
@@ -9,10 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/netinfo": "9.3.5",
+    "@react-navigation/material-top-tabs": "^6.6.0",
+    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/native-stack": "^6.9.10",
+    "@react-navigation/stack": "^6.3.14",
+    "base-64": "^1.0.0",
+    "deprecated-react-native-listview": "0.0.8",
     "expo": "~47.0.12",
+    "expo-app-loading": "~2.1.1",
+    "expo-barcode-scanner": "^12.1.0",
+    "expo-camera": "^13.1.0",
+    "expo-font": "~11.0.1",
+    "expo-image-manipulator": "^11.0.0",
+    "expo-linear-gradient": "^12.0.1",
+    "expo-location": "^15.0.1",
+    "expo-permissions": "^14.0.0",
+    "expo-sms": "^11.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.0.1",
+    "react-native-paper": "^5.2.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-search-list": "^3.0.1",
+    "react-native-tab-view": "^3.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
