--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.17.1",
+    "install": "^0.13.0",
+    "npm": "^9.5.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.3",
@@ -38,7 +40,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.2.0",
-    "react-native-safe-area-context": "4.4.1",
+    "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.18.0",
     "react-native-search-list": "^3.0.1",
     "react-native-tab-view": "^3.5.0"
