--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "6.5.2",
     "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/material-top-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.4",
@@ -40,7 +41,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.2.0",
-    "react-native-safe-area-context": "^3.2.0",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-search-list": "^3.0.1",
     "react-native-tab-view": "^3.5.0"
