--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-sms": "^11.0.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "~12.0.0",
     "firebase": "^9.17.1",
     "install": "^0.13.0",
     "npm": "^9.5.1",
