--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
+    "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
@@ -40,6 +41,9 @@
       "eas": {
         "projectId": "f20e7caf-c4a9-4422-aabf-b585b9fc2a2a"
       }
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
