--- a/package.json
+++ b/package.json
@@ -9,41 +9,39 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "6.5.2",
-    "@react-native-community/netinfo": "9.3.5",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/material-top-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
     "base-64": "^1.0.0",
     "deprecated-react-native-listview": "0.0.8",
-    "expo": "~47.0.12",
-    "expo-app-loading": "~2.1.1",
-    "expo-barcode-scanner": "^12.1.0",
-    "expo-camera": "^13.1.0",
-    "expo-font": "~11.0.1",
-    "expo-image-manipulator": "^11.0.0",
-    "expo-linear-gradient": "^12.0.1",
-    "expo-location": "^15.0.1",
-    "expo-permissions": "^14.0.0",
-    "expo-sms": "^11.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-web-browser": "~12.0.0",
+    "expo": "^52.0.0",
+    "expo-camera": "~16.0.10",
+    "expo-font": "~13.0.2",
+    "expo-image-manipulator": "~13.0.5",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-location": "~18.0.4",
+    "expo-sms": "~13.0.0",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-web-browser": "~14.0.1",
     "firebase": "^9.17.1",
     "install": "^0.13.0",
     "npm": "^9.5.1",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "6.0.1",
+    "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.2.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-search-list": "^3.0.1",
     "react-native-tab-view": "^3.5.0"
   },
