--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "11.4.1",
-    "@react-navigation/material-top-tabs": "^6.6.0",
-    "@react-navigation/native": "^6.1.4",
+    "@react-navigation/material-top-tabs": "^6.6.14",
+    "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
     "base-64": "^1.0.0",
@@ -40,7 +40,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.2.0",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-search-list": "^3.0.1",
     "react-native-tab-view": "^3.5.0"
