--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,21 +19,21 @@
     "@react-navigation/stack": "^6.3.14",
     "base-64": "^1.0.0",
     "deprecated-react-native-listview": "0.0.8",
-    "expo": "^52.0.0",
-    "expo-camera": "~16.0.10",
+    "expo": "~52.0.35",
+    "expo-camera": "~16.0.16",
     "expo-font": "~13.0.2",
-    "expo-image-manipulator": "~13.0.5",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-location": "~18.0.4",
-    "expo-sms": "~13.0.0",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
-    "expo-web-browser": "~14.0.1",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-location": "~18.0.6",
+    "expo-sms": "~13.0.1",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
     "firebase": "^9.17.1",
     "install": "^0.13.0",
     "npm": "^9.5.1",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.7",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
@@ -43,7 +43,8 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-search-list": "^3.0.1",
-    "react-native-tab-view": "^3.5.0"
+    "react-native-tab-view": "^3.5.0",
+    "expo-image-loader": "~5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
