--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@react-navigation/native-stack": "^6.9.10",
     "@react-navigation/stack": "^6.3.14",
     "base-64": "^1.0.0",
-    "deprecated-react-native-listview": "0.0.8",
     "expo": "~52.0.35",
     "expo-camera": "~16.0.16",
     "expo-font": "~13.0.2",
+    "expo-image": "~2.0.0",
     "expo-image-manipulator": "~13.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-location": "~18.0.6",
